--- a/WEB-programming/lab2/main.html
+++ b/WEB-programming/lab2/main.html
@@ -274,13 +274,21 @@
                 '1 год': 0.24,
                 '1,5 года': 0.18,
                 '2 года': 0.15
+            },
+            months: {
+                '3 месяца': 3,
+                '6 месяцев': 6,
+                '9 месяцев': 9,
+                '1 год': 12,
+                '1,5 года': 18,
+                '2 года': 24
             }
         };
 
         function updateDepositTerms() {
             const type = depositType.value;
             const terms = depositOptions[type];
-
+           
             depositTerm.innerHTML = '';
             for (const term in terms) {
                 const option = document.createElement('option');
@@ -300,7 +308,7 @@
             const amount = parseFloat(depositAmount.value);
             const rate = depositOptions[type][term];
 
-            const termInMonths = parseInt(term.split(' ')[0]);
+            const termInMonths = depositOptions.months[term];
             const finalAmount = amount * (1 + rate * termInMonths / 12);
 
             result.innerHTML = `Вид вклада: ${type === 'replenishable' ? 'Пополняемый' : 'Срочный'}<br>
